@@ -21,6 +21,8 @@ Import-Package: com.openexchange.config,
  com.openexchange.i18n,
  com.openexchange.java,
  com.openexchange.log,
+ com.openexchange.mail,
+ com.openexchange.mail.mime,
  com.openexchange.management,
  com.openexchange.management.console,
  com.openexchange.osgi,
@@ -45,6 +47,12 @@ Import-Package: com.openexchange.config,
  javax.crypto.spec,
  javax.imageio,
  javax.imageio.stream,
+ javax.mail,
+ javax.mail.event,
+ javax.mail.internet,
+ javax.mail.internet.idn,
+ javax.mail.search,
+ javax.mail.util,
  javax.management,
  javax.management.remote,
  javax.naming,
